# CONFIRM

./: .gitignore  CLAIMS_FROM_RESULTS.md  EXPERIMENT_AUDIT.json  EXPERIMENT_AUDIT.md  EXTERNAL_BENCHMARK_PREREG.md  EXTERNAL_BENCHMARK_RESULTS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_NOTES_v2.md  MANIFEST.md  NATURE_STYLE_REREVIEW_20260620.md  NATURE_STYLE_REVIEW_20260620.md  PAPER_PLAN.md  PROJECT_REVIEW_20260620.md  RESEARCH_BRIEF.md  RESULTS_MANIFEST_20260620.md  pyproject.toml  requirements.txt
.aris/: installed-skills-codex.txt  installed-skills-codex.txt.prev  installed-skills.txt  tools
docs/: ARCHITECTURE.md  ARCHITECTURE_v2.md  BENCHMARK_READY_LAYER.md  DATA_DISCOVERY_REMOTE.md  DATA_PREPARATION_WAVE1.md  DATA_REQUIREMENTS_NEXT.md  STAGED_RESULTS_INDEX.md
idea-stage/: IDEA_REPORT.html  IDEA_REPORT.md
paper-backup-20260618_194041/: main.tex  preamble.tex
refine-logs/: DATA_INVENTORY.md  DATA_READINESS_CHECK_20260616.md  EXPERIMENT_CODE_REVIEW_20260616_150410.md  EXPERIMENT_PLAN.md  EXPERIMENT_RESULTS.md  EXPERIMENT_RESULTS_20260616_150502.md  EXPERIMENT_TRACKER.md  FINAL_PROPOSAL.md  PIPELINE_SUMMARY.md  REVIEW_SUMMARY.md
review-stage/: AUTO_REVIEW.md  README.md  REVIEW_STATE.json  loop2-round1-review.md  loop2-round2-final-review.md  loop2-round3-negatives-review.md  paper-review-round1.md  paper-review-round2.md  paper-review-round3.md
scripts/: _remote_diag.py  _remote_extract_psychosis.py  _remote_extract_sz.py  _remote_extract_sz_edges.py  _remote_probe_bsnip1.py  _remote_probe_psychosis.py  audit_claims.py  build_benchmark_ready_layer.py  (+5 more)
(+473 files in other folders)
